--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,11 @@ verify_ssl = true
 [packages]
 pipwin = "*"
 pyaudio = {path = "./PyAudio-0.2.11-cp38-cp38-win32.whl"}
+flask = "*"
+flask-login = "*"
+flask-sqlalchemy = "*"
+flask-httpauth = "*"
+bcrypt = "*"
 
 [requires]
 python_version = "3.8"
