installed python-dotenv

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ flask-bcrypt = "*"
 flask-migrate = "*"
 psycopg2 = "*"
 flask-script = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
