--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.1",
     "web-vitals": "^0.2.4"
   },
@@ -60,5 +61,5 @@
   },
   "main": "public/electron.js",
   "homepage": "./",
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
