--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "simple-peer": "^9.9.3",
     "socket.io-client": "^2.3.1",
     "web-vitals": "^0.2.4"
   },
